--- a/api-gateway/gateway_admin/pom.xml
+++ b/api-gateway/gateway_admin/pom.xml
@@ -3,17 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-cloud-project-study</artifactId>
+        <artifactId>api-gateway</artifactId>
         <groupId>com.study</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>api-gateway</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>gateway-service</module>
-        <module>gateway_admin</module>
-    </modules>
 
+    <artifactId>gateway_admin</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
