--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,11 +8,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>api-gateway</artifactId>
+    <properties>
+        <common.version>1.0-SNAPSHOT</common.version>
+    </properties>
+    <artifactId>common</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>gateway-service</module>
-        <module>gateway_admin</module>
+        <module>common-mybaties</module>
+        <module>common-base</module>
+        <module>common-core</module>
     </modules>
 
 
