--- a/api-gateway/gateway_admin/pom.xml
+++ b/api-gateway/gateway_admin/pom.xml
@@ -16,5 +16,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
 
+        </resources>
+    </build>
 </project>
