--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
     <artifactId>spring-cloud-project-study</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>register-center</module>
         <module>api-gateway</module>
-        <module>common</module>
+        <module>common-common</module>
     </modules>
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
@@ -18,33 +19,34 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
         <spring-platform.version>Cairo-SR3</spring-platform.version>
         <spring-cloud-dependencies.version>Greenwich.SR5</spring-cloud-dependencies.version>
-     <!--   <spring-security.version>5.2.1.RELEASE</spring-security.version>-->
 
         <apache.commons-io.version>2.5</apache.commons-io.version>
         <apache.commons.beanutils>1.9.3</apache.commons.beanutils>
         <com.google.zxing.version>3.1.0</com.google.zxing.version>
         <swagger2.version>2.9.2</swagger2.version>
-
+        <shiro-spring.version>1.4.0</shiro-spring.version>
         <poi.version>3.17</poi.version>
+
+        <jackson.version>2.9.9</jackson.version>
+        <jackson.datatype>2.10.1</jackson.datatype>
+        <fastjson.version>1.2.62</fastjson.version>
+        <jackson-databind.varsion>2.9.9.3</jackson-databind.varsion>
+        <httpclient.version>4.5.10</httpclient.version>
     </properties>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.6.RELEASE</version>
+        <relativePath></relativePath>
+    </parent>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud-dependencies.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -80,9 +82,19 @@
                 <version>5.1.2</version>
             </dependency>
             <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.11</version>
+            </dependency>
+            <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.47</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring</artifactId>
+                <version>${shiro-spring.version}</version>
             </dependency>
             <!-- API文档配置 -->
             <dependency>
@@ -109,6 +121,17 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-databind.varsion}</version>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -151,14 +174,15 @@
                 <version>3.17</version>
             </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
         <plugins>
-            <plugin>
+          <!--  <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
