--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>api-gateway</module>
         <module>common-common</module>
         <module>mybaties-generator</module>
+        <module>user-service</module>
     </modules>
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
