--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>common-common</module>
         <module>mybaties-generator</module>
         <module>user-service</module>
+        <module>mybaties-simple-generator</module>
     </modules>
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
