add  generator config file  example

--- a/mybaties-simple-generator/pom.xml
+++ b/mybaties-simple-generator/pom.xml
@@ -33,7 +33,7 @@
                 <configuration>
                     <configurationFile>src/main/resources/generatorConfig.xml
                     </configurationFile>
-                    <overwrite>false</overwrite>
+                    <overwrite>true</overwrite>
                     <verbose>true</verbose>
                 </configuration>
                 <dependencies>
