--- a/cus_mybaties_generator/pom.xml
+++ b/cus_mybaties_generator/pom.xml
@@ -43,5 +43,74 @@
       </dependency>
 
   </dependencies>
-
+    <build>
+        <finalName>MYbaties-generator</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <!-- 不同环境的配置文件选择 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                         <configuration>
+                             <resources>
+                                 <resource>
+                                     <directory>src/main/java</directory>
+                                     <includes>
+                                         <include>**/*.properties</include>
+                                         <include>**/*.xml</include>
+                                     </includes>
+                                     <filtering>true</filtering>
+                                 </resource>
+                                 <resource>
+                                     <directory>src/main/resources</directory>
+                                     <includes>
+                                         <include>**/*.properties</include>
+                                         <include>**/*.xml</include>
+                                     </includes>
+                                     <filtering>true</filtering>
+                                 </resource>
+                             </resources>
+                             <overwrite>true</overwrite>
+                             <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                             <!-- 也可以用下面这样的方式（指定相对url的方式指定outputDirectory） <outputDirectory>target/classes</outputDirectory> -->
+                             <!-- 待处理的资源定义 -->
+                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
