--- a/cus_mybaties_generator/pom.xml
+++ b/cus_mybaties_generator/pom.xml
@@ -36,6 +36,11 @@
           <version>5.1.45</version>
       </dependency>
       <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+      </dependency>
+      <dependency>
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
           <version>1.18.8</version>
