--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,12 @@
         <module>common-common</module>
         <module>user-service</module>
         <module>mybaties-simple-generator</module>
+        <module>cus_generator</module>
     </modules>
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
+        <!-- mavenfilter {}占位符   maven-source-plugin -->
+        <resource.delimiter>@</resource.delimiter>
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
