--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.1.16</version>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>1.1.9</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
@@ -188,11 +188,11 @@
                 <version>1.16.20</version>
                 <scope>provided</scope>
             </dependency>
-            <dependency>
+          <!--  <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson</artifactId>
                 <version>3.5.4</version>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
