--- a/user-service-shiro/src/main/resources/application.yml
+++ b/user-service-shiro/src/main/resources/application.yml
@@ -9,13 +9,13 @@ info:
 spring:
   profiles:
     active: dev
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    platform: mysql
-    type: com.alibaba.druid.pool.DruidDataSource
+  main:
+    allow-bean-definition-overriding: true
 mybatis:
   configLocation: classpath:mybatis-config.xml
   mapperLocations: classpath*:mapper/**/*.xml
   typeAliasesPackage: com.study.user.entity.*
 server:
   port: 8080
+
+
