--- a/user-service-shiro/src/main/resources/application.yml
+++ b/user-service-shiro/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     allow-bean-definition-overriding: true
   resources:
     static-locations:
-      - classpath:resources/static
+      - classpath:/static
 #i18n setting
   messages:
      basename: com/study/user/i18n/messages ,i18n/common/messages
