add  gateway admin

--- a/api-gateway/gateway-service/pom.xml
+++ b/api-gateway/gateway-service/pom.xml
@@ -58,5 +58,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.study</groupId>
+            <artifactId>common-common</artifactId>
+            <version>${com.study.commont.model.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
