--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -14,6 +14,7 @@
         <module>gateway-service</module>
         <module>gateway_admin</module>
     </modules>
-
+ <dependencies>
+ </dependencies>
 
 </project>
